# ComputerSystemHs

./: .gitignore  Makefile  README.md  computersystem.cabal  hie.yaml
src/: Assembler.hs  Builder.hs  Circuit.hs  Main.hs  MainWasm.hs  Serialize.hs  SimpleJSON.hs
src/CPU/: Components.hs  Netlist.hs  Step.hs  Types.hs
web/: index.html
web/css/: style.css
web/js/: renderer.js  ui.js  wasm-bridge.js
