cabal-version:      3.0
name:               computersystem
version:            0.1.0.0
synopsis:           8-bit CPU simulator in pure Haskell, targeting WebAssembly
license:            MIT
build-type:         Simple

common common-opts
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:
      base       >= 4.16 && < 5
    , containers
    , array
    , mtl
    , bytestring

executable computersystem
  import:           common-opts
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
      Circuit
    , Builder
    , Assembler
    , SimpleJSON
    , Serialize
    , CPU.Types
    , CPU.Netlist
    , CPU.Components
    , CPU.Step
